--- a/Esp_with_Sensors_and_Thingspeak/platformio.ini
+++ b/Esp_with_Sensors_and_Thingspeak/platformio.ini
@@ -8,13 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ttgo-t1]
+[env:ttgo-lora32-v1]
 platform = espressif32
-board = ttgo-t1
+board = ttgo-lora32-v1
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	bodmer/TFT_eSPI@^2.4.61
-	pololu/VL53L1X@^1.3.1
 	lennarthennigs/Button2@^2.0.1
 	mathworks/ThingSpeak@^2.0.0
+	pololu/VL53L1X@^1.3.1
